@@ -4,26 +4,26 @@
  EnableA:        2*L->H,        1*H->L
  EnableB:        2*L->H,        1*H->L
  EnableC:        2*L->H,        1*H->L
-   StepA:    64000*L->H,    64000*H->L, Max High=27us Total High=360536us
-   StepB:    64000*L->H,    64000*H->L, Max High=32us Total High=380857us
-   StepC:    64000*L->H,    64000*H->L, Max High=29us Total High=331511us
+   StepA:    64000*L->H,    64000*H->L, Max High=27us Total High=361504us
+   StepB:    64000*L->H,    64000*H->L, Max High=32us Total High=383248us
+   StepC:    64000*L->H,    64000*H->L, Max High=31us Total High=331524us
 Position[A]=64000
 
 Position[B]=64000
 
 Position[C]=64000
 
-Time in EnableA  max=176205 us, total=176205 us
+Time in EnableA  max=176213 us, total=176213 us
 
-Time in EnableB  max=188855 us, total=188855 us
+Time in EnableB  max=188891 us, total=188891 us
 
-Time in EnableC  max=196913 us, total=196913 us
+Time in EnableC  max=196943 us, total=196943 us
 
-Time in FillISR  max=2190 us, total=2557863 us
+Time in FillISR  max=2270 us, total=2626341 us
 
-Time in StepA  max=27 us, total=360536 us
+Time in StepA  max=27 us, total=361504 us
 
-Time in StepB  max=32 us, total=380857 us
+Time in StepB  max=32 us, total=383248 us
 
-Time in StepC  max=29 us, total=331511 us
+Time in StepC  max=31 us, total=331524 us
 
